--- a/frontend/azure-pipelines.yml
+++ b/frontend/azure-pipelines.yml
@@ -23,7 +23,8 @@ stages:
     - task: Docker@2
       displayName: Build an image
       inputs:
-        command: build
-        dockerfile: 'frontend/Dockerfile'
-        tags: |
-          $(tag)
+        containerRegistry: 'DocekrHub-baohq33'
+        repository: 'ecommerce-frontend'
+        command: 'build'
+        Dockerfile: '**/Dockerfile'
+        tags: '$(tag)'
