--- a/frontend/azure-pipelines.yml
+++ b/frontend/azure-pipelines.yml
@@ -13,18 +13,17 @@ variables:
 
 stages:
 - stage: Build
-  displayName: Build image
+  displayName: Build and Push image
   jobs:
   - job: Build
     displayName: Build
     pool:
       vmImage: ubuntu-latest
     steps:
+
     - task: Docker@2
-      displayName: Build an image
       inputs:
         containerRegistry: 'DocekrHub-baohq33'
         repository: 'ecommerce-frontend'
-        command: 'build'
+        command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
-        tags: '$(tag)'
