Update azure-pipelines.yml for Azure Pipelines
Update repository name

--- a/frontend/azure-pipelines.yml
+++ b/frontend/azure-pipelines.yml
@@ -24,6 +24,6 @@ stages:
     - task: Docker@2
       inputs:
         containerRegistry: 'DocekrHub-baohq33'
-        repository: 'ecommerce-frontend'
+        repository: 'baohq33/ecommerce-frontend'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
